--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <title>Techlyne</title>
+  <title>Techlyn</title>
   <meta name="description" content="Professional Web & Web3 services — manual frontend, security, audits.">
   <style>
 :root{
@@ -128,7 +128,7 @@ a{
         </div>
 
         <div>
-          <div style="font-size:14px" id="brand-name" data-i18n="brand_name">Techlyne</div>
+          <div style="font-size:14px" id="brand-name" data-i18n="brand_name">Techlyn</div>
           <div class="muted" style="margin-top:2px" id="brand-sub" data-i18n="brand_sub">Manual development • Integrations • Security</div>
         </div>
       </div>
@@ -375,7 +375,7 @@ a{
 
     </section>
 
-    <footer style="margin-top:22px" data-i18n="footer">© Techlyne — Manual development</footer>
+    <footer style="margin-top:22px" data-i18n="footer">© Techlyn — Manual development</footer>
   </div>
 
   <script>
@@ -458,7 +458,7 @@ a{
 (function(){
   const translations = {
     "en": {
-      "brand_name":"Techlyne",
+      "brand_name":"Techlyn",
       "brand_sub":"Manual development • Integrations • Security",
       "nav_home":"Home",
       "nav_services":"Services",
@@ -498,7 +498,7 @@ a{
       "order_pop_note":"Message will be copied to clipboard for convenience."
     },
     "ru": {
-      "brand_name":"Techlyne",
+      "brand_name":"Techlyn",
       "brand_sub":"Ручная разработка • Интеграции • Безопасность",
       "nav_home":"Главная",
       "nav_services":"Услуги",
@@ -538,7 +538,7 @@ a{
       "order_pop_note":"Сообщение автоматически копируется в буфер."
     },
     "hy": {
-      "brand_name":"Techlyne",
+      "brand_name":"Techlyn",
       "brand_sub":"Ձեռքբովանդակության մշակում • Ինտեգրացիաներ • Անվտանգություն",
       "nav_home":"Գլխավոր",
       "nav_services":"Ծառայությունները",
