--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Services — Techlyne</title>
+<title>Services — Techlyn</title>
 <style>
 :root{
   --bg:#061226;
@@ -132,7 +132,7 @@ ul{margin:10px 0 0;padding-left:18px;color:var(--muted);line-height:1.5}
 
     <section class="card" style="margin-top:12px">
       <div class="title-row">
-        <h3 data-i18n="landing">Lending Website (Landing)</h3>
+        <h3 data-i18n="landing">Landing</h3>
         <div class="price" aria-hidden="true">
           <span class="orig">$79</span>
           <span class="price-value">$55</span>
@@ -205,18 +205,18 @@ ul{margin:10px 0 0;padding-left:18px;color:var(--muted);line-height:1.5}
     </section>
   </main>
 
-  <footer style="margin-top:18px" class="small" data-i18n="footer">© Techlyne</footer>
+  <footer style="margin-top:18px" class="small" data-i18n="footer">© Techlyn</footer>
 </div>
 
 <script>
 (function(){
   const translations = {
     "en": {
-      "brand_name":"Techlyne",
+      "brand_name":"Techlyn",
       "brand_sub":"Manual development • Integrations • Security",
       "nav_home":"Home",
       "page_title":"Services",
-      "landing":"Lending Website (Landing)",
+      "landing":"Landing Website",
       "land_desc":"Single-page responsive landing, Telegram-based contact, analytics, optimisation, SSL, deploy, 1 revision.",
       "website":"Website (Standard)",
       "web_desc":"Up to 5 pages, forms to Telegram/CRM, SEO, responsive, 2 revisions.",
@@ -230,10 +230,10 @@ ul{margin:10px 0 0;padding-left:18px;color:var(--muted);line-height:1.5}
       "smart_desc":"Development and audit available — pricing upon request.",
       "security_addon_title":"Security Add-on",
       "security_addon_desc":"Standalone add-on: deep diagnostics, WAF/Cloudflare setup, CSP, headers, pen-test scenarios. Price: $49.",
-      "footer":"© Techlyne"
+      "footer":"© Techlyn"
     },
     "ru": {
-      "brand_name":"Techlyne",
+      "brand_name":"Techlyn",
       "brand_sub":"Ручная разработка • Интеграции • Безопасность",
       "nav_home":"Главная",
       "page_title":"Услуги",
@@ -254,7 +254,7 @@ ul{margin:10px 0 0;padding-left:18px;color:var(--muted);line-height:1.5}
       "footer":"© Techlyne"
     },
     "hy": {
-      "brand_name":"Techlyne",
+      "brand_name":"Techlyn",
       "brand_sub":"Ձեռքով մշակում • Ինտեգրացիաներ • Անվտանգություն",
       "nav_home":"Գլխավոր",
       "page_title":"Ծառայություններ",
@@ -272,7 +272,7 @@ ul{margin:10px 0 0;padding-left:18px;color:var(--muted);line-height:1.5}
       "smart_desc":"Ծրագրում և աուդիտ — գները՝ ըստ հարցման.",
       "security_addon_title":"Անվտանգության Լրացում",
       "security_addon_desc":"Խորաֆիկ ախտորոշում, WAF/Cloudflare կարգավորում, CSP և անվտանգության հեդերներ։ Գին՝ $49.",
-      "footer":"© Techlyne"
+      "footer":"© Techlyn"
     }
   };
 
