--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ a{
       "smart":"Smart Contracts & Audit","smart_sub":"Development and audit — pricing upon request","learn_more":"Learn more",
       "faq_title":"FAQ — short","how_time":"How deadlines are counted?","how_time_sub":"From receipt of materials and prepayment.","how_pay":"Payment?","how_pay_sub":"50% up front, 50% on delivery.","tech":"Technologies?","tech_sub":"Manual HTML/CSS/JS, frameworks on request. Web3 via ethers.js.","security_q":"Security?","security_q_sub":"Basic hardening included; deep audit is separate.",
       "contact_title":"Contact — Telegram","contact_note":"Buttons copy the handle and open Telegram. Email is hidden — contact via Telegram.",
-      "label_tg":"Telegram","copy_tg":"Copy handle","open_tg":"Open Telegram","order":"Order","details":"Details","footer":"© Techlyne — Manual development","security_addon":"Also available: <strong>Security add-on</strong>",
+      "label_tg":"Telegram","copy_tg":"Copy handle","open_tg":"Open Telegram","order":"Order","details":"Details","footer":"© Techlyn — Manual development","security_addon":"Also available: <strong>Security add-on</strong>",
       "order_pop_title":"Choose contact method",
       "order_pop_desc":"How would you like to place the order?",
       "order_pop_btn_tg":"Write in Telegram",
