--- a/services.html
+++ b/services.html
@@ -251,7 +251,7 @@ ul{margin:10px 0 0;padding-left:18px;color:var(--muted);line-height:1.5}
       "smart_desc":"Разработка и аудит — цены по запросу.",
       "security_addon_title":"Доп. пакет безопасности",
       "security_addon_desc":"Глубокая диагностика, настройка WAF/Cloudflare, CSP, заголовки безопасности, сценарии pentest. Цена: $49.",
-      "footer":"© Techlyne"
+      "footer":"© Techlyn"
     },
     "hy": {
       "brand_name":"Techlyn",
