--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ a{
       <div class="brand" aria-label="Techlyn">
         <div class="logo logo-neon" aria-hidden="true" title="Techlyn">
           <div class="logo-ring">
-            <img src="/mnt/data/8fe3e3b4-4890-427a-be2c-db083523af60.png" alt="Techlyn logo" class="logo-img" />
+            <img src="./img/photo_2025-10-01_20-26-04-Photoroom.png" alt="Techlyne logo" class="logo-img" />
           </div>
         </div>
 
@@ -489,7 +489,8 @@ a{
       "security":"Security Package","included":"Included in Premium.","term_security":"Deep diagnostics & hardening","li_s1":"Automated scanning + manual check","li_s2":"Cloudflare / WAF setup, rate-limiting","li_s3":"CSP, security headers, input validation","li_s4":"Pen-test scenarios & remediation plan",
       "smart":"Smart Contracts & Audit","smart_sub":"Development and audit — pricing upon request","learn_more":"Learn more",
       "faq_title":"FAQ — short","how_time":"How deadlines are counted?","how_time_sub":"From receipt of materials and prepayment.","how_pay":"Payment?","how_pay_sub":"50% up front, 50% on delivery.","tech":"Technologies?","tech_sub":"Manual HTML/CSS/JS, frameworks on request. Web3 via ethers.js.","security_q":"Security?","security_q_sub":"Basic hardening included; deep audit is separate.",
-      "contact_title":"Contact — Telegram","contact_note":"Buttons copy the handle and open Telegram. Email is hidden — contact via Telegram.","label_tg":"Telegram","copy_tg":"Copy handle","open_tg":"Open Telegram","order":"Order","details":"Details","footer":"© Techlyn — Manual development","security_addon":"Also available: <strong>Security add-on</strong>",
+      "contact_title":"Contact — Telegram","contact_note":"Buttons copy the handle and open Telegram. Email is hidden — contact via Telegram.",
+      "label_tg":"Telegram","copy_tg":"Copy handle","open_tg":"Open Telegram","order":"Order","details":"Details","footer":"© Techlyn — Manual development","security_addon":"Also available: <strong>Security add-on</strong>",
       "order_pop_title":"Choose contact method",
       "order_pop_desc":"How would you like to place the order?",
       "order_pop_btn_tg":"Write in Telegram",
@@ -525,4 +526,282 @@ a{
       "premium":"Премиум-сайт","term_premium":"Срок: 7 дней","li_p1":"До 10 страниц, дизайн на заказ, аккуратные анимации","li_p2":"Пакет безопасности","li_p3":"CMS по запросу, SEO, 3 раунда, 14 дней поддержки",
       "web3":"Web3 сайт (Фронтенд + Интеграция)","term_web3":"Срок: 7 дней","li_web31":"Кошельки: MetaMask / WalletConnect","li_web32":"Авторизация через кошелёк, отображение баланса токена","li_web33":"UI для взаимодействия с контрактом (read/write)",
       "ecom":"Интернет-магазин","term_ecom":"Срок: 7–10 дней (зависит от каталога)","li_e1":"Полный магазин (товары, категории, корзина)","li_e2":"Интеграция платёжных систем (Stripe / карты)","li_e3":"Админ: товары, заказы, базовый учёт","li_e4":"Аналитика, SEO, деплой, 7 дней поддержки",
-      "security":"Пакет безопасности","included":"Включено в Премиум.
+      "security":"Пакет безопасности","included":"Включено в Премиум.","term_security":"Глубокая диагностика и усиление","li_s1":"Автосканирование + ручная проверка","li_s2":"Настройка Cloudflare / WAF, rate-limit","li_s3":"CSP, security headers, валидация вводимых данных","li_s4":"Сценарии pentest и план исправлений",
+      "smart":"Смарт-контракты и аудит","smart_sub":"Разработка и аудит — цены по запросу","learn_more":"Узнать подробнее",
+      "faq_title":"FAQ — коротко","how_time":"Как считаются сроки?","how_time_sub":"Считается от получения материалов и предоплаты.","how_pay":"Оплата?","how_pay_sub":"50% аванс, 50% при сдаче.","tech":"Технологии?","tech_sub":"Ручной HTML/CSS/JS, фреймворки по запросу. Web3 через ethers.js.","security_q":"Безопасность?","security_q_sub":"Базовое усиление включено; глубокий аудит отдельно.",
+      "contact_title":"Контакт — Telegram","contact_note":"Кнопки копируют хэндл и открывают Telegram. Почта скрыта — связаться через Telegram.",
+      "label_tg":"Telegram","copy_tg":"Копировать","open_tg":"Открыть Telegram","order":"Заказать","details":"Подробнее","footer":"© Techlyn — Ручная разработка","security_addon":"Также доступно: <strong>Доп. пакет безопасности</strong>",
+      "order_pop_title":"Выберите способ связи",
+      "order_pop_desc":"Как вы хотите оформить заказ?",
+      "order_pop_btn_tg":"Написать в Telegram",
+      "order_pop_btn_form":"На форму",
+      "order_pop_note":"Сообщение автоматически копируется в буфер."
+    },
+    "hy": {
+      "brand_name":"Techlyn",
+      "brand_sub":"Ձեռքբովանդակության մշակում • Ինտեգրացիաներ • Անվտանգություն",
+      "nav_home":"Գլխավոր",
+      "nav_services":"Ծառայությունները",
+      "contact_btn":"Կապ",
+      "quick_start":"Արագ սկսում",
+      "quick_start_small":"Արագ սկսում",
+      "hero_title":"Մասնագիտական կայքեր և Web3 ինտեգրացիաներ",
+      "hero_lead":"Ձեռքով frontend, Web3 ինտեգրացիաներ և անվտանգության աուդիտներ։ Հստակ, հուսալի դիզայն՝ հաճախորդի համար։",
+      "feat1":"Մաքուր կոդ","feat2":"Պատասխանատու","feat3":"Անվտանգություն","feat4":"Ուղորդում",
+      "packages":"Փաթեթներ",
+      "advantages_title":"Մեր առավելությունները",
+      "advantages_sub":"Ո՞րն են պատճառները որ հաճախորդները ընտրում են մեզ",
+      "adv_tab1":"Արդյունք","adv_tab2":"Կոնվերսիաներ","adv_tab3":"Ամբողջական ծառայություն",
+      "adv_heading1":"Սահմանենք արագ, հզոր կայքեր, որոնք համալիրով կոնվերտ են",
+      "adv_text1":"Անդադրող կայքերից մինչև Web3 ֆունկցիաներ և անվտանգության ամրացում — մենք ապահովում ենք մաքուր կոդ, իրական ինտեգրացիաներ և մտքի հանգստություն։",
+      "adv_heading2":"Անցումները՝ հաճախորդների մեջ",
+      "adv_text2":"Մենք նախագծում և մշակում ենք բարձր կոնվերտացվող լենդինգներ, որոնք գրավում են ուշադրությունը, բարձրացնում ներգրավվածությունը և մեծացնում ROI-ն։",
+      "adv_heading3":"Ձեր մեկ կանգառային գործընկերը կայքերի զարգացման համար",
+      "adv_text3":"Ստրատեգիայից և հսկողությունից մինչև գործարկում և օպտիմիզացում՝ մենք զբաղվում ենք յուրաքանչյուր քայլով՝ ըստ ձեր նպատակների։",
+      "adv_button":"Սկսել հիմա",
+      "landing":"Landing կայք","term_landing":"Վաղաժամկետը՝ 2 օր",
+      "li_l1":"Միանվագ պատասխանատու ленդինգ","li_l2":"Ղեկավար, CTA, առավելություններ, FAQ, կապ Telegram-ով","li_l3":"Webhook → Telegram","li_l4":"Անալիտիկա, օպտիմիզացիա, SSL, դեպլոյ","li_l5":"1 փուլի վերանայում, աղբյուրների փոխանցում",
+      "website":"Կայք (Ստանդարտ)","term_standard":"Վաղաժամկետը՝ 4 օր","li_w1":"Մինչև 5 էջ (Գլխավոր, Ծառայություններ, Կեյսեր, Կապեր)","li_w2":"Ֆորմաներ → Telegram/CRM","li_w3":"SEO, պատասխանատու, 2 փուլ վերանայում",
+      "premium":"Պրեմիում կայք","term_premium":"Վաղաժամկետը՝ 7 օր","li_p1":"Մինչև 10 էջ, bespoke դիզայն, հանգիստ անիմացիաներ","li_p2":"Անվտանգության փաթեթ","li_p3":"CMS խնդրանքով, SEO, 3 փուլի, 14 օր աջակցության",
+      "web3":"Web3 կայք (Frontend + Ինտեգրում)","term_web3":"Վաղաժամկետը՝ 7 օր","li_web31":"Wallets: MetaMask / WalletConnect","li_web32":"Ամփոփում՝ wallet-ով, token-ի հաշվարկ","li_web33":"UI համար contract interaction (read/write)",
+      "ecom":"Էլեկտրոնային խանութ","term_ecom":"Վաղաժամկետը՝ 7–10 օր (կախված կատալոգից)","li_e1":"Ամբողջական խանութ (ապրանքներ, կատեգորիաներ, զամբյուղ)","li_e2":"Payment gateway ինտեգրում (Stripe / քարտեր)","li_e3":"Ադմին պանել՝ ապրանք, պատվերներ, հիմնական ինվենտար","li_e4":"Անալիտիկա, SEO, դեպլոյ, 7 օր աջակցության",
+      "security":"Անվտանգության փաթեթ","included":"Ընդգրկված է պրեմիումում։","term_security":"Խորքային ախտորոշում և ամրացում","li_s1":"Ավտոմատ սկանավորում + ձեռքի ստուգում","li_s2":"Cloudflare / WAF կարգավորում, rate-limit","li_s3":"CSP, անվտանգության հեդերներ, մուտքային վալիդացիա","li_s4":"Pen-test սցենարներ և վերականգման պլան",
+      "smart":"Սմարթ կոնտրակտներ և աուդիտ","smart_sub":"Ծրագրում և աուդիտ — գները ըստ հարցման","learn_more":"Իմանալ ավելին",
+      "faq_title":"ՀՏՀ — կարճ","how_time":"Ինչպես հաշվարկվում են ժամկետները?","how_time_sub":"Հաշվում է նյութերի ստացումից և նախնական վճարից։","how_pay":"Վճարում?","how_pay_sub":"50% նախապես, 50% առաքման պահին։","tech":"Տեխնոլոգիաներ?","tech_sub":"Ձեռնարկ HTML/CSS/JS, framework-ներ ըստ հարցի. Web3՝ через ethers.js.","security_q":"Անվտանգություն?","security_q_sub":"Հիմնական ամրացումը ներառված է; խորքային աուդիտը առանձին է։",
+      "contact_title":"Կապ — Telegram","contact_note":"Կոճակները պատճենում են հենդլը և բացում Telegram։ Էլ.փոստը թաքնված է — կապվեք Telegram-ով։",
+      "label_tg":"Telegram","copy_tg":"Պատճենել","open_tg":"Բացել Telegram","order":" Պատվիրել","details":"Մանրամասներ","footer":"© Techlyn — Ձեռքով մշակված","security_addon":"Հավելյալ հասանելի է: <strong>Անվտանգության Լրացում</strong>",
+      "order_pop_title":"Ընտրեք կապի եղանակը",
+      "order_pop_desc":"Ինչպես ցանկանում եք պատվիրել?",
+      "order_pop_btn_tg":"Написать в Telegram",
+      "order_pop_btn_form":"Բեռնել ձևը",
+      "order_pop_note":"Հաղորդագրությունը ավտոմատ պատճենվում է չանհատականության համար."
+    }
+  };
+
+  function apply(lang){
+    if(!translations[lang]) lang='en';
+    document.querySelectorAll('[data-i18n]').forEach(el=>{
+      const key = el.getAttribute('data-i18n');
+      if(!key) return;
+      const txt = translations[lang][key];
+      if(typeof txt === 'undefined') return;
+      if(el.children.length === 0){
+        if(key === 'security_addon'){
+          el.innerHTML = translations[lang][key];
+        } else {
+          el.textContent = txt;
+        }
+      } else {
+        for(const node of el.childNodes){
+          if(node.nodeType === Node.TEXT_NODE){
+            if(node.nodeContent && node.nodeContent.trim().length>0){
+              node.nodeContent = ' ' + txt;
+              break;
+            }
+          }
+        }
+      }
+    });
+
+    document.querySelectorAll('.lang-btn').forEach(b=>{
+      b.classList.remove('active');
+      b.setAttribute('aria-pressed','false');
+    });
+    const btn = document.getElementById('lang-' + lang);
+    if(btn){ btn.classList.add('active'); btn.setAttribute('aria-pressed','true'); }
+    try{ localStorage.setItem('site_lang', lang); }catch(e){}
+  }
+
+  ['en','ru','hy'].forEach(code=>{
+    const el = document.getElementById('lang-'+code);
+    if(el) el.addEventListener('click', ()=> apply(code));
+  });
+
+  let saved = null;
+  try{ saved = localStorage.getItem('site_lang'); }catch(e){}
+  if(saved && translations[saved]) apply(saved);
+  else {
+    let userLang = (navigator.language || navigator.userLanguage || 'en').toLowerCase();
+    if(userLang.startsWith('ru') || userLang.startsWith('uk')) apply('ru');
+    else if(userLang.startsWith('hy')) apply('hy');
+    else apply('en');
+  }
+
+  try { window.siteTranslations = translations; } catch(e) { }
+})();
+  </script>
+
+<style>
+.order-popover {
+  position: absolute;
+  z-index: 9999;
+  min-width: 220px;
+  max-width: 320px;
+  background: linear-gradient(180deg, rgba(2,6,23,0.98), rgba(4,18,34,0.95));
+  border: 1px solid rgba(255,255,255,0.04);
+  box-shadow: 0 10px 30px rgba(2,6,23,0.6);
+  padding: 12px;
+  border-radius: 10px;
+  color: #e6eef6;
+  font-size: 14px;
+  backdrop-filter: blur(6px);
+}
+.order-popover .title { font-weight:700; margin-bottom:8px; }
+.order-popover .row { display:flex; gap:8px; margin-top:8px; }
+.order-popover .btn-pop {
+  flex:1;
+  padding:8px 10px;
+  border-radius:8px;
+  border:none;
+  cursor:pointer;
+  font-weight:700;
+}
+.btn-pop-tg { background: linear-gradient(90deg,var(--accent1,var(--accent1, #4dd0e1)),var(--accent2,var(--accent2, #7dd3fc))); color:#02222b; }
+.btn-pop-form { background:transparent; border:1px solid rgba(255,255,255,0.06); color:var(--muted,#9aa4b2); }
+.order-popover .note { font-size:12px; color: rgba(255,255,255,0.6); margin-top:8px; }
+</style>
+
+<script>
+(function(){
+  const JOTFORM = 'https://form.jotform.com/252745154703052';
+  const TG_HANDLE = '@Techlynn';
+  const TG_LINK = 'https://t.me/Techlynn';
+
+  const pop = document.createElement('div');
+  pop.className = 'order-popover';
+  pop.style.display = 'none';
+  document.body.appendChild(pop);
+
+  function getCurrentSiteLang(){
+    try{
+      const s = localStorage.getItem('site_lang');
+      if(s) return s;
+    }catch(e){}
+    const userLang = (navigator.language || navigator.userLanguage || 'en').toLowerCase();
+    if(userLang.startsWith('ru') || userLang.startsWith('uk')) return 'ru';
+    if(userLang.startsWith('hy')) return 'hy';
+    return 'en';
+  }
+
+  function renderPopover(lang){
+    const t = (window.siteTranslations && window.siteTranslations[lang]) ? window.siteTranslations[lang] : (window.siteTranslations && window.siteTranslations['en']) ? window.siteTranslations['en'] : {
+      order_pop_title: 'Choose contact method',
+      order_pop_desc: 'How would you like to place the order?',
+      order_pop_btn_tg: 'Write in Telegram',
+      order_pop_btn_form: 'Open form',
+      order_pop_note: 'Message will be copied to clipboard for convenience.'
+    };
+    pop.innerHTML = `
+      <div class="title">${t.order_pop_title || 'Choose contact method'}</div>
+      <div class="desc">${t.order_pop_desc || 'How would you like to place the order?'}</div>
+      <div class="row">
+        <button class="btn-pop btn-pop-tg" type="button">${t.order_pop_btn_tg || 'Write in Telegram'}</button>
+        <button class="btn-pop btn-pop-form" type="button">${t.order_pop_btn_form || 'Open form'}</button>
+      </div>
+      <div class="note">${t.order_pop_note || 'Message will be copied to clipboard for convenience.'}</div>
+    `;
+  }
+
+  function hidePop() {
+    pop.style.display = 'none';
+    currentTarget = null;
+  }
+  document.addEventListener('click', (e)=>{
+    if(pop.style.display === 'none') return;
+    if(!pop.contains(e.target) && !e.target.closest('[data-package]') && e.target.id !== 'btn-order-landing'){
+      hidePop();
+    }
+  }, {capture:true});
+
+  document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape') hidePop(); });
+
+  function buildMessage(pkg, price){
+    let priceText = price ? (' — $' + price) : '';
+    return `Order: ${pkg}${priceText}\nContact: ${TG_HANDLE}\nSource: ${location.href}`;
+  }
+
+  pop.addEventListener('click', async (e)=>{
+    const target = e.target;
+    if(target.classList.contains('btn-pop-tg')){
+      if(!currentTarget) return;
+      const pkg = currentTarget.dataset.package || 'Custom';
+      const price = currentTarget.dataset.price || '';
+      const msg = buildMessage(pkg, price);
+      try {
+        await navigator.clipboard.writeText(msg);
+      } catch(e){}
+      window.open(TG_LINK, '_blank');
+      hidePop();
+    } else if(target.classList.contains('btn-pop-form')){
+      window.open(JOTFORM, '_blank');
+      hidePop();
+    }
+  });
+
+  function showPopoverFor(target){
+    const lang = getCurrentSiteLang();
+    renderPopover(lang);
+
+    const rect = target.getBoundingClientRect();
+    pop.style.left = '-9999px';
+    pop.style.top = '-9999px';
+    pop.style.display = 'block';
+    requestAnimationFrame(()=>{
+      const pageX = rect.left + window.scrollX;
+      const pageY = rect.bottom + window.scrollY + 10;
+      const left = Math.min(pageX, window.scrollX + window.innerWidth - pop.offsetWidth - 12);
+      pop.style.left = left + 'px';
+      pop.style.top = pageY + 'px';
+    });
+  }
+
+  let currentTarget = null;
+
+  function wireButtons(){
+    document.querySelectorAll('[data-package]').forEach(btn=>{
+      btn.addEventListener('click', (e)=>{
+        e.stopPropagation();
+        e.preventDefault();
+        currentTarget = btn;
+        pop.style.display='block';
+        pop.style.left='-9999px';
+        pop.style.top='-9999px';
+        requestAnimationFrame(()=> showPopoverFor(btn));
+      });
+    });
+
+    const landing = document.getElementById('btn-order-landing');
+    if(landing){
+      landing.addEventListener('click', (e)=>{
+        e.stopPropagation();
+        e.preventDefault();
+        landing.dataset.package = landing.dataset.package || 'Landing';
+        landing.dataset.price = landing.dataset.price || '55';
+        currentTarget = landing;
+        pop.style.display='block';
+        pop.style.left='-9999px';
+        pop.style.top='-9999px';
+        requestAnimationFrame(()=> showPopoverFor(landing));
+      });
+    }
+  }
+
+  wireButtons();
+
+  document.querySelectorAll('.lang-btn').forEach(b=>{
+    b.addEventListener('click', ()=>{
+      if(pop.style.display === 'block'){
+        renderPopover(getCurrentSiteLang());
+      }
+    });
+  });
+
+})();
+</script>
+
+</body>
+</html>
+
+
+sdelay tak chtobi vmesto etoy xuyni bilo kartinka logo 
+nichevo drugugobo ne trogay !
