--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
+sam sdelay vse 
+
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <title>Techlyne</title>
+  <title>Techlyn</title>
   <meta name="description" content="Professional Web & Web3 services — manual frontend, security, audits.">
   <style>
-    
 :root{
   --bg:#061226;
   --card:#081426;
@@ -117,23 +118,19 @@ a{
   text-decoration: none;
 }
   </style>
-
-<link rel="icon" type="image/png" href="/img/photo_2025-10-01_20-26-04-Photoroom.png">
-<link rel="apple-touch-icon" href="/img/photo_2025-10-01_20-26-04-Photoroom.png">
-
 </head>
 <body>
   <div class="container" role="main">
     <header>
-      <div class="brand" aria-label="Techlyne">
-        <div class="logo logo-neon" aria-hidden="true" title="Techlyne">
+      <div class="brand" aria-label="Techlyn">
+        <div class="logo logo-neon" aria-hidden="true" title="Techlyn">
           <div class="logo-ring">
             <img src="./img/photo_2025-10-01_20-26-04-Photoroom.png" alt="Techlyne logo" class="logo-img" />
           </div>
         </div>
 
         <div>
-          <div style="font-size:14px" id="brand-name" data-i18n="brand_name">Techlyne</div>
+          <div style="font-size:14px" id="brand-name" data-i18n="brand_name">Techlyn</div>
           <div class="muted" style="margin-top:2px" id="brand-sub" data-i18n="brand_sub">Manual development • Integrations • Security</div>
         </div>
       </div>
@@ -380,7 +377,7 @@ a{
 
     </section>
 
-    <footer style="margin-top:22px" data-i18n="footer">© Techlyne — Manual development</footer>
+    <footer style="margin-top:22px" data-i18n="footer">© Techlyn — Manual development</footer>
   </div>
 
   <script>
@@ -463,7 +460,7 @@ a{
 (function(){
   const translations = {
     "en": {
-      "brand_name":"Techlyne",
+      "brand_name":"Techlyn",
       "brand_sub":"Manual development • Integrations • Security",
       "nav_home":"Home",
       "nav_services":"Services",
@@ -495,7 +492,7 @@ a{
       "smart":"Smart Contracts & Audit","smart_sub":"Development and audit — pricing upon request","learn_more":"Learn more",
       "faq_title":"FAQ — short","how_time":"How deadlines are counted?","how_time_sub":"From receipt of materials and prepayment.","how_pay":"Payment?","how_pay_sub":"50% up front, 50% on delivery.","tech":"Technologies?","tech_sub":"Manual HTML/CSS/JS, frameworks on request. Web3 via ethers.js.","security_q":"Security?","security_q_sub":"Basic hardening included; deep audit is separate.",
       "contact_title":"Contact — Telegram","contact_note":"Buttons copy the handle and open Telegram. Email is hidden — contact via Telegram.",
-      "label_tg":"Telegram","copy_tg":"Copy handle","open_tg":"Open Telegram","order":"Order","details":"Details","footer":"© Techlyne — Manual development","security_addon":"Also available: <strong>Security add-on</strong>",
+      "label_tg":"Telegram","copy_tg":"Copy handle","open_tg":"Open Telegram","order":"Order","details":"Details","footer":"© Techlyn — Manual development","security_addon":"Also available: <strong>Security add-on</strong>",
       "order_pop_title":"Choose contact method",
       "order_pop_desc":"How would you like to place the order?",
       "order_pop_btn_tg":"Write in Telegram",
@@ -503,7 +500,7 @@ a{
       "order_pop_note":"Message will be copied to clipboard for convenience."
     },
     "ru": {
-      "brand_name":"Techlyne",
+      "brand_name":"Techlyn",
       "brand_sub":"Ручная разработка • Интеграции • Безопасность",
       "nav_home":"Главная",
       "nav_services":"Услуги",
@@ -535,7 +532,7 @@ a{
       "smart":"Смарт-контракты и аудит","smart_sub":"Разработка и аудит — цены по запросу","learn_more":"Узнать подробнее",
       "faq_title":"FAQ — коротко","how_time":"Как считаются сроки?","how_time_sub":"Считается от получения материалов и предоплаты.","how_pay":"Оплата?","how_pay_sub":"50% аванс, 50% при сдаче.","tech":"Технологии?","tech_sub":"Ручной HTML/CSS/JS, фреймворки по запросу. Web3 через ethers.js.","security_q":"Безопасность?","security_q_sub":"Базовое усиление включено; глубокий аудит отдельно.",
       "contact_title":"Контакт — Telegram","contact_note":"Кнопки копируют хэндл и открывают Telegram. Почта скрыта — связаться через Telegram.",
-      "label_tg":"Telegram","copy_tg":"Копировать","open_tg":"Открыть Telegram","order":"Заказать","details":"Подробнее","footer":"© Techlyne — Ручная разработка","security_addon":"Также доступно: <strong>Доп. пакет безопасности</strong>",
+      "label_tg":"Telegram","copy_tg":"Копировать","open_tg":"Открыть Telegram","order":"Заказать","details":"Подробнее","footer":"© Techlyn — Ручная разработка","security_addon":"Также доступно: <strong>Доп. пакет безопасности</strong>",
       "order_pop_title":"Выберите способ связи",
       "order_pop_desc":"Как вы хотите оформить заказ?",
       "order_pop_btn_tg":"Написать в Telegram",
@@ -543,7 +540,7 @@ a{
       "order_pop_note":"Сообщение автоматически копируется в буфер."
     },
     "hy": {
-      "brand_name":"Techlyne",
+      "brand_name":"Techlyn",
       "brand_sub":"Ձեռքբովանդակության մշակում • Ինտեգրացիաներ • Անվտանգություն",
       "nav_home":"Գլխավոր",
       "nav_services":"Ծառայությունները",
@@ -574,7 +571,7 @@ a{
       "smart":"Սմարթ կոնտրակտներ և աուդիտ","smart_sub":"Ծրագրում և աուդիտ — գները ըստ հարցման","learn_more":"Իմանալ ավելին",
       "faq_title":"ՀՏՀ — կարճ","how_time":"Ինչպես հաշվարկվում են ժամկետները?","how_time_sub":"Հաշվում է նյութերի ստացումից և նախնական վճարից։","how_pay":"Վճարում?","how_pay_sub":"50% նախապես, 50% առաքման պահին։","tech":"Տեխնոլոգիաներ?","tech_sub":"Ձեռնարկ HTML/CSS/JS, framework-ներ ըստ հարցի. Web3՝ через ethers.js.","security_q":"Անվտանգություն?","security_q_sub":"Հիմնական ամրացումը ներառված է; խորքային աուդիտը առանձին է։",
       "contact_title":"Կապ — Telegram","contact_note":"Կոճակները պատճենում են հենդլը և բացում Telegram։ Էլ.փոստը թաքնված է — կապվեք Telegram-ով։",
-      "label_tg":"Telegram","copy_tg":"Պատճենել","open_tg":"Բացել Telegram","order":" Պատվիրել","details":"Մանրամասներ","footer":"© Techlyne — Ձեռքով մշակված","security_addon":"Հավելյալ հասանելի է: <strong>Անվտանգության Լրացում</strong>",
+      "label_tg":"Telegram","copy_tg":"Պատճենել","open_tg":"Բացել Telegram","order":" Պատվիրել","details":"Մանրամասներ","footer":"© Techlyn — Ձեռքով մշակված","security_addon":"Հավելյալ հասանելի է: <strong>Անվտանգության Լրացում</strong>",
       "order_pop_title":"Ընտրեք կապի եղանակը",
       "order_pop_desc":"Ինչպես ցանկանում եք պատվիրել?",
       "order_pop_btn_tg":"Написать в Telegram",
@@ -806,3 +803,7 @@ a{
 
 </body>
 </html>
+
+
+sdelay tak chtobi vmesto etoy xuyni bilo kartinka logo 
+nichevo drugugobo ne trogay !
