--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-sam sdelay vse 
 
 <!doctype html>
 <html lang="en">
@@ -147,6 +146,11 @@ a{
 
      
       </nav>
+  <link rel="icon" type="image/png" href="/img/photo_2025-10-01_20-26-04-Photoroom.png">
+<link rel="apple-touch-icon" href="/img/photo_2025-10-01_20-26-04-Photoroom.png">
+
+
+      
     </header>
 
     <section class="hero" aria-labelledby="hero-title">
