--- a/services.html
+++ b/services.html
@@ -99,9 +99,14 @@ ul{margin:10px 0 0;padding-left:18px;color:var(--muted);line-height:1.5}
   nav{gap:8px;flex-wrap:wrap}
 }
 </style>
+
+<link rel="icon" type="image/png" href="/img/photo_2025-10-01_20-26-04-Photoroom.png">
+<link rel="apple-touch-icon" href="/img/photo_2025-10-01_20-26-04-Photoroom.png">
+
 </head>
 <body>
 <div class="container">
+  
   <header>
     <div class="brand" aria-label="Techlyne">
       <div class="logo logo-neon" aria-hidden="true" title="Techlyne">
