--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <script>
-if (location.pathname.endsWith('index.html')) {
+if (location.pathname.endsWith('services.html')) {
   const base = location.pathname.slice(0, -'index.html'.length) || '/';
   location.replace(base + location.search + location.hash);
 }
