--- a/services.html
+++ b/services.html
@@ -272,7 +272,7 @@ ul{margin:10px 0 0;padding-left:18px;color:var(--muted);line-height:1.5}
       "smart_desc":"Ծրագրում և աուդիտ — գները՝ ըստ հարցման.",
       "security_addon_title":"Անվտանգության Լրացում",
       "security_addon_desc":"Խորաֆիկ ախտորոշում, WAF/Cloudflare կարգավորում, CSP և անվտանգության հեդերներ։ Գին՝ $49.",
-      "footer":"© Techlyna"
+      "footer":"© Techlyn"
     }
   };
 
