--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Market Sandbox — TV-like Chart (New Engine)</title>
+  <title>Market Sandbox</title>
   <style>
     :root{
       --bg:#0b0f14; --text:#e7eef7; --muted:#9fb0c3; --line:#223044;
